--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     margin:.25% 0 0 -5%;
 }
 
-.txtbx{
+#txtbx{
     display:block;
     float:left;
     padding: 0 0 1% 0;
@@ -71,4 +71,15 @@
     border-radius:5px;
     margin-right:-5px;
     padding:0;
+}
+
+i{
+    border-radius:4px; 
+    padding:3px 2px 5px 2px; 
+    margin:0; width:20px; 
+    height:20px; 
+    background-color:blue; 
+    color:white;
+    border-width:2px; 
+    border-color:lightskyblue;
 }
