--- a/style.css
+++ b/style.css
@@ -19,12 +19,15 @@
 
 .colcard {
     float:left;
-    width: 25%;
-    padding : 0 2%;
+    width: 20%;
+    padding : 0%;
+    margin-left:1%;
+    margin-right:1%;
 }
 
 .rowcard {
     margin:0 -5px;
+    padding:0;
 }
 
 .rowcard:after{
